--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ INDEXER_NAME=dipdup_celestia_indexer
 CELESTIA_NODE_URL=<TODO_INSERT_NODE_URL>    # REQUIRED
 CELESTIA_NODE_RPS=5
 INDEXER_REQUEST_TIMEOUT=10
+INDEXER_THREADS_COUNT=10
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_USER=<TODO_INSERT_DB_USER>         # REQUIRED
