Fix: prometheus middleware

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=<TODO_INSERT_DB_USER>         # REQUIRED
 POSTGRES_PASSWORD=<TODO_INSERT_DB_PASSWORD> # REQUIRED
 POSTGRES_DB=celestia
+API_BIND=127.0.0.1:9876
+API_RATE_LIMIT=20
+API_PROMETHEUS_ENABLED=false
+API_REQUEST_TIMEOUT=10
