--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
           version: v1.54.1
           args: --timeout=4m
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: install Go
