Add node blob receiver

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 LOG_LEVEL=debug
 INDEXER_NAME=dipdup_celestia_indexer
-CELESTIA_NODE_URL=<TODO_INSERT_NODE_URL>    # REQUIRED
+CELESTIA_NODE_URL=<TODO_INSERT_NODE_URL>         # REQUIRED
 CELESTIA_NODE_RPS=5
+CELESTIA_NODE_AUTH_TOKEN=<TODO_INSERT_RPC_TOKEN> # REQUIRED FOR API
+CELESTIA_NODE_TIMEOUT=10
 INDEXER_REQUEST_TIMEOUT=10
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-POSTGRES_USER=<TODO_INSERT_DB_USER>         # REQUIRED
-POSTGRES_PASSWORD=<TODO_INSERT_DB_PASSWORD> # REQUIRED
+POSTGRES_USER=<TODO_INSERT_DB_USER>              # REQUIRED
+POSTGRES_PASSWORD=<TODO_INSERT_DB_PASSWORD>      # REQUIRED
 POSTGRES_DB=celestia
 API_BIND=127.0.0.1:9876
 API_RATE_LIMIT=20
