--- a/test/data/state.yml
+++ b/test/data/state.yml
@@ -4,5 +4,5 @@
   name: test_indexer
   total_tx: 394067
   total_accounts: 12512357
-  total_namespaces: 1000
+  total_fee: 172635712635813
   total_namspaces_size: 324234
