--- a/test/data/namespace.yml
+++ b/test/data/namespace.yml
@@ -3,13 +3,16 @@
   namespace_id: 0x5F7A8DDFE6136FE76B65B9066D4F816D707F
   size: 1234
   pfd_count: 3
+  first_height: 1000
 - id: 2
   version: 1
   namespace_id: 0x5F7A8DDFE6136FE76B65B9066D4F816D707F
   size: 1255
   pfd_count: 2
+  first_height: 1000
 - id: 3
   version: 0
   namespace_id: 0x62491A45621ABEA79EBA193FD2944B5B9EBD
   size: 12
   pfd_count: 1
+  first_height: 1000
