--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@ POSTGRES_PORT=5432
 POSTGRES_USER=<TODO_INSERT_DB_USER>              # REQUIRED
 POSTGRES_PASSWORD=<TODO_INSERT_DB_PASSWORD>      # REQUIRED
 POSTGRES_DB=celestia
-API_BIND=127.0.0.1:9876
+API_HOST=127.0.0.1
+API_PORT=9876
 API_RATE_LIMIT=20
 API_PROMETHEUS_ENABLED=false
 API_REQUEST_TIMEOUT=10
