Finalize refactor of [Total]NamespacesSize to [Total]BlobsSize.

--- a/test/data/state.yml
+++ b/test/data/state.yml
@@ -6,5 +6,5 @@
   total_accounts: 12512357
   total_fee: 172635712635813
   total_namespaces: 1000
-  total_namespaces_size: 324234
+  total_blobs_size: 324234
   total_supply: 263471253613
