--- a/test/data/message.yml
+++ b/test/data/message.yml
@@ -2,28 +2,28 @@
   height: 1000
   time: '2023-07-04T03:10:57+00:00'
   position: 0
-  type: WithdrawDelegatorReward
+  type: MsgWithdrawDelegatorReward
   tx_id: 1
   data: null
 - id: 2
   height: 1000
   time: '2023-07-04T03:10:57+00:00'
   position: 1
-  type: Delegate
+  type: MsgDelegate
   tx_id: 1
   data: null
 - id: 3
   height: 1000
   time: '2023-07-04T03:10:57+00:00'
   position: 2
-  type: Unjail
+  type: MsgUnjail
   tx_id: 2
   data: null
 - id: 4
   height: 1000
   time: '2023-07-04T03:10:57+00:00'
   position: 3
-  type: PayForBlobs
+  type: MsgPayForBlobs
   tx_id: 2
   data:
     namespaces:
