--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -6,4 +6,4 @@ jobs:
     name: License Check
     steps:
       - uses: actions/checkout@v2
-      - uses: yusufpapurcu/go-license-checker@v0.5
+      - uses: LavyshAlexander/go-licenses-action
