--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,10 @@ jobs:
     name: Linter
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
           go-version: '1.20'
           cache: false
@@ -16,24 +18,24 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54.1
-          args: --timeout=4m
+          args: --timeout=5m
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - name: install Go
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.20.x
-      - name: checkout code
-        uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: golang tests
+      - name: Golang tests
         env:
           GO111MODULE: on
         run: |
