--- a/test/data/rollback/block_stats.yml
+++ b/test/data/rollback/block_stats.yml
@@ -1,8 +1,19 @@
-- id: 2
-  height: 1000 
-  time: '2023-07-04T03:10:57+00:00'
+- id: 3
+  height: 1001
+  time: '2023-07-04T03:10:58+00:00'
   tx_count: 0
-  events_count: 0  
+  events_count: 0
+  blobs_size: 100
+  fee: 497012
+  supply_change: 23590834
+  inflation_rate: 0
+
+- id: 2
+  height: 1000
+  time: '2023-07-04T03:10:57+00:00'
+  tx_count: 2
+  events_count: 0
+  blobs_size: 900
   fee: 2873468273
   supply_change: 30930476
   inflation_rate: 0.080000000000000000
@@ -10,8 +21,9 @@
 - id: 1
   height: 999
   time: '2023-07-04T03:10:56+00:00'
-  tx_count: 0
+  tx_count: 1
   events_count: 0
+  blobs_size: 800
   fee: 1726351723
   supply_change: 20930476
   inflation_rate: 0.080000000000000000
