--- a/test/data/rollback/block_stats.yml
+++ b/test/data/rollback/block_stats.yml
@@ -7,6 +7,7 @@
   fee: 497012
   supply_change: 23590834
   inflation_rate: 0
+  block_time: 11000
 
 - id: 2
   height: 1000
@@ -17,6 +18,7 @@
   fee: 2873468273
   supply_change: 30930476
   inflation_rate: 0.080000000000000000
+  block_time: 11000
 
 - id: 1
   height: 999
@@ -27,3 +29,4 @@
   fee: 1726351723
   supply_change: 20930476
   inflation_rate: 0.080000000000000000
+  block_time: 11000
