--- a/test/data/namespace_message.yml
+++ b/test/data/namespace_message.yml
@@ -3,3 +3,13 @@
   time: '2023-07-04T03:10:57+00:00'
   tx_id: 2
   height: 1000
+- msg_id: 2
+  namespace_id: 1
+  time: '2023-07-04T03:10:57+00:00'
+  tx_id: 3
+  height: 1000
+- msg_id: 1
+  namespace_id: 2
+  time: '2023-07-04T03:10:57+00:00'
+  tx_id: 4
+  height: 1000
